--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           </div>
         </div>
         <hr />
-        <div class="bar">
+        <div class="bar container">
           <ul class="center">
             <li><a href="#Netflix">Netflix</a></li>
             <li><a href="#Shahid">Shahid</a></li>
