--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
       </div>
       <div class="container justify-content-start center  fsl">
         <div id="bgimg" class="bg-img"></div>
-        <div id="info" class="info">
+        <div id="info" class="info center">
         </div>
       </div>
     </div>
