second  commit today

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </div>
   </aside>
   <!-- body -->
-  <div class="main vh-100">
+  <div id="m" class="main vh-100">
 
 
 
@@ -182,32 +182,20 @@
 
       <div id="Card" class="center w-100 flex-wrap"></div>
     </div>
-
-
-
-
-
-
-
-
     <button id="btn-f" onclick="foot()"><i class="fas fa-caret-down" aria-hidden="true"></i></button>
-    <footer class="flex-column center w-100" id="footer">
-      <div class="container">
-        <div class="w-100 h-75 center">
-          <ul>
-            <li>Facebook</li>
-            <li>Linked in</li>
-            <li>Git hup</li>
-          </ul>
-        </div>
-        <div class="w-100 h-25 center">
-          by Hesham Ahmed
-        </div>
-      </div>
-    </footer>
+
+    <div id="footer" class="container putchese ful flex-column center align-items-start">
+
+    </div>
+
+
   </div>
-
-
+  <!-- 
+  <footer class="container flex-column p center align-items-start" id="footer">
+    <div class="w-100 p-5 text-center">
+      <h2>Card</h2>
+    </div>
+  </footer> -->
   <!-- notfiction -->
   <script src="./js/bootstrap.js"></script>
 </body>
