last  commit today 2

--- a/index.html
+++ b/index.html
@@ -182,20 +182,48 @@
 
       <div id="Card" class="center w-100 flex-wrap"></div>
     </div>
-    <button id="btn-f" onclick="foot()"><i class="fas fa-caret-down" aria-hidden="true"></i></button>
 
-    <div id="footer" class="container putchese ful flex-column center align-items-start">
 
-    </div>
 
 
   </div>
-  <!-- 
-  <footer class="container flex-column p center align-items-start" id="footer">
-    <div class="w-100 p-5 text-center">
-      <h2>Card</h2>
+  <button id="btn-f" onclick="foot()"><i class="fas fa-caret-down" aria-hidden="true"></i></button>
+
+  <footer class="flex-column w-100 center align-items-start" id="footer">
+    <div class="container h-100">
+      <div class="w-100 center h-75">
+        <ul>
+          <li><a href="#">nnnnnnn</a></li>
+          <li><a href="#">nnnnnnn</a></li>
+          <li><a href="#">nnnnnnn</a></li>
+          <li><a href="#">nnnnnnn</a></li>
+          <li><a href="#">nnnnnnn</a></li>
+          <li><a href="#">nnnnnnn</a></li>
+          <li><a href="#">nnnnnnn</a></li>
+        </ul>
+        <ul>
+          <li><a href="#">nnnnnnn</a></li>
+          <li><a href="#">nnnnnnn</a></li>
+          <li><a href="#">nnnnnnn</a></li>
+          <li><a href="#">nnnnnnn</a></li>
+          <li><a href="#">nnnnnnn</a></li>
+          <li><a href="#">nnnnnnn</a></li>
+          <li><a href="#">nnnnnnn</a></li>
+        </ul>
+        <ul>
+          <li><a href="#">nnnnnnn</a></li>
+          <li><a href="#">nnnnnnn</a></li>
+          <li><a href="#">nnnnnnn</a></li>
+          <li><a href="#">nnnnnnn</a></li>
+          <li><a href="#">nnnnnnn</a></li>
+          <li><a href="#">nnnnnnn</a></li>
+          <li><a href="#">nnnnnnn</a></li>
+        </ul>
+      </div>
+      <div class="w-100 center h-25">by hesham ahmed</div>
     </div>
-  </footer> -->
+  </footer>
+
   <!-- notfiction -->
   <script src="./js/bootstrap.js"></script>
 </body>
