first  commit today 2

--- a/index.html
+++ b/index.html
@@ -187,8 +187,9 @@
 
 
   </div>
-  <button id="btn-f" onclick="foot()"><i class="fas fa-caret-down" aria-hidden="true"></i></button>
-
+  <div id="btn-f" class="di-btn center">
+    <button class="btn-f" onclick="foot()"><i class="fas fa-caret-down" aria-hidden="true"></i></button>
+  </div>
   <footer class="flex-column w-100 center align-items-start" id="footer">
     <div class="container h-100">
       <div class="w-100 center h-75">
