first  commit today 4

--- a/index.html
+++ b/index.html
@@ -248,9 +248,9 @@
         <div>
           <ul class="center">
             <li><a href="https://www.facebook.com/heshamahmed17/"><i class="fab fa-facebook"></i></a></li>
-            <li><a href="https://wa.me/qr/CWZ42NG6QPHMO1"><i class="fab fa-whatsapp"></i></a></li>
-            <li><a href=""><i class="fab fa-linkedin"></i></a></li>
-            <li><a href=""><i class="fab fa-github"></i></a></li>
+            <li><a href="tel:01227728001"><i class="fab fa-whatsapp"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/hisham-ahmed-64570b200/"><i class="fab fa-linkedin"></i></a></li>
+            <li><a href="https://github.com/hesham156"><i class="fab fa-github"></i></a></li>
           </ul>
         </div>
         <span>Hesham Ahmed</span>
