first  commit today 6

--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
           <li><a href="#Home"><i class="fas fa-home"></i>Home</a></li>
           <li><a href="#Scenes"><i class="fas fa-desktop"></i>Scenes</a></li>
           <li><a href="#Card"><i class="fas fa-shopping-cart"></i>Card</a></li>
-          <li><a href="#Rerrunder"><i class="fas fa-bell"></i>Rerrunder</a></li>
         </ul>
       </div>
       <div onclick="show()" class="other">
@@ -138,43 +137,8 @@
       <div class="w-100 p-5 text-center">
         <h2>Scenes</h2>
       </div>
-      <div class="w-100 flex-wrap flex-row center">
-        <div class="center">
-          <iframe width="350" height="400" src="https://www.youtube.com/embed/AaLoOzI26YA" title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
-        </div>
-        <div class="center">
-          <iframe width="350" height="400" src="https://www.youtube.com/embed/bRrK8h6R4hI" title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
-        </div>
-        <div class="center">
-          <iframe width="350" height="400" src="https://www.youtube.com/embed/tWuPu3GL2jY" title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
-        </div>
-        <div class="center">
-          <iframe width="350" height="400" src="https://www.youtube.com/embed/jj35CalTYeE" title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
-        </div>
-        <div class="center">
-          <iframe width="350" height="400" src="https://www.youtube.com/embed/Ed4WezawtgM" title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
-        </div>
-        <div class="center">
-          <iframe width="350" height="400" src="https://www.youtube.com/embed/sH4Y450PSVM" title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
-        </div>
+      <div id="vi" class="w-100 flex-wrap flex-row center">
+
       </div>
     </div>
 
@@ -197,43 +161,30 @@
   </div>
   <footer class="flex-column w-100 center align-items-start" id="footer">
     <div class="container  h-100">
-      <div class="w-100 center h-75">
-        <ul>
-          <li><a href="#">nnnnnnn</a></li>
-          <li><a href="#">nnnnnnn</a></li>
-          <li><a href="#">nnnnnnn</a></li>
-          <li><a href="#">nnnnnnn</a></li>
-          <li><a href="#">nnnnnnn</a></li>
-          <li><a href="#">nnnnnnn</a></li>
-          <li><a href="#">nnnnnnn</a></li>
+      <div class="w-100 center h-75 overflow-auto flex-column">
+        <ul id="foot-con" class="text-center center flex-wrap">
+
         </ul>
-        <ul>
-          <li><a href="#">nnnnnnn</a></li>
-          <li><a href="#">nnnnnnn</a></li>
-          <li><a href="#">nnnnnnn</a></li>
-          <li><a href="#">nnnnnnn</a></li>
-          <li><a href="#">nnnnnnn</a></li>
-          <li><a href="#">nnnnnnn</a></li>
-          <li><a href="#">nnnnnnn</a></li>
+        <ul class="text-center social center flex-wrap">
+          <li><a href="#"> <i class="fab fa-facebook"></i> facebook</a></li>
+          <li><a href="#"> <i class="fab fa-youtube"></i> Youtube</a></li>
+          <li><a href="#"> <i class="fab fa-twitter"></i> twitter</a></li>
+          <li><a href="#"><i class="fab fa-instagram"></i> instagram </a></li>
+
         </ul>
-        <ul>
-          <li><a href="#">nnnnnnn</a></li>
-          <li><a href="#">nnnnnnn</a></li>
-          <li><a href="#">nnnnnnn</a></li>
-          <li><a href="#">nnnnnnn</a></li>
-          <li><a href="#">nnnnnnn</a></li>
-          <li><a href="#">nnnnnnn</a></li>
-          <li><a href="#">nnnnnnn</a></li>
-        </ul>
+
+
       </div>
       <div class="w-100 creator center flex-column h-25">
         by
         <div>
           <ul class="center">
-            <li><a href="https://www.facebook.com/heshamahmed17/"><i class="fab fa-facebook"></i></a></li>
-            <li><a href="tel:01227728001"><i class="fab fa-whatsapp"></i></a></li>
-            <li><a href="https://www.linkedin.com/in/hisham-ahmed-64570b200/"><i class="fab fa-linkedin"></i></a></li>
-            <li><a href="https://github.com/hesham156"><i class="fab fa-github"></i></a></li>
+            <li><a href="https://www.facebook.com/heshamahmed17/" target="_blank"><i class="fab fa-facebook"></i></a>
+            </li>
+            <li><a href="tel:01227728001" target="_blank"><i class="fab fa-whatsapp"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/hisham-ahmed-64570b200/" target="_blank"><i
+                  class="fab fa-linkedin"></i></a></li>
+            <li><a href="https://github.com/hesham156" target="_blank"><i class="fab fa-github"></i></a></li>
           </ul>
         </div>
         <span>Hesham Ahmed</span>
